--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.otf filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
